overflow issue fixed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -483,6 +483,7 @@ html {
   width: 100%;
   position: relative;
   height: 100%;
+  overflow: hidden;
 }
 
 body {
